updated paths, added Phundament 4 template

--- a/AdminLTE-master/css/AdminLTE.css
+++ b/AdminLTE-master/css/AdminLTE.css
@@ -13,7 +13,7 @@
 html,
 body {
   overflow-x: hidden!important;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Arial', 'Source Sans Pro', sans-serif;
   -webkit-font-smoothing: antialiased;
   min-height: 100%;
   background: #f9f9f9;
@@ -128,7 +128,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Arial', 'Source Sans Pro', sans-serif;
 }
 /* Page Header */
 .page-header {
